Prevented other forms from having their image cut off

--- a/Pokedex/Pokedex/wwwroot/css/main.css
+++ b/Pokedex/Pokedex/wwwroot/css/main.css
@@ -312,6 +312,7 @@ img {
 
 .lightshadowed {
   width: 2.5rem;
+  margin: .2rem 0;
 }
 
 .pokemonTeamPokemon {
